fixing bugs in api
